--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 </div>
                 <div id="main-grid"></div>
                 <div id="grid-controls">
-                    
+                    <button id="default-color-btn">Normal Colouring</button>
+                    <button id="rainbow-mode-btn">Rainbow Mode</button>
+                    <button id="clear-btn">Clear Canvas</button>
+                    <button id="remove-grid-btn">Toggle Grid</button>
                 </div>
             </div>
         </main>
