Fixed bug in which rainbow mode button was not detected

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div id="grid-controls">
                     <button id="default-color-btn">Normal Colouring</button>
                     <button id="rainbow-mode-btn">Rainbow Mode</button>
+                    <button id="eraser-mode-btn">Eraser Mode</button>
                     <button id="clear-btn">Clear Canvas</button>
                     <button id="remove-grid-btn">Toggle Grid</button>
                 </div>
