Final commit (only bug fixes and touchups after)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <button id="clear-btn">Clear Canvas</button>
                     <button id="remove-grid-btn">Toggle Grid</button>
                 </div>
+                <span id="current-mode-display"></span>
             </div>
         </main>
 
